# skydance

./: .gitignore  .isort.cfg  .verchew.ini  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  scent.py
.github/workflows/: ci.yaml
docs/: requirements.txt
docs/api/: enum.md  network.md  protocol.md
skydance/: __init__.py  commands.py  constants.py  controller.py  enum.py  protocol.py  session.py
skydance/network/: buffer.py  discovery.py  session.py
skydance/tests/: test_commands.py  test_controller.py  test_protocol.py  test_session.py
skydance/tests/network/: test_buffer.py  test_discovery.py  test_session.py
tests/: test_manual.py
